# python-course-homeworks

./: .gitignore  .pylintrc  LICENSE  README.md  setup.cfg
homework-01/: pyproject.toml
homework-07/: pyproject.toml
homework-07/src/: main.py
homework-07/templates/: index.html
lesson2/basic/: any.py  dict.py  final.py  kwargs.py  list.py  optional.py  parameter.py  return.py  tupealias.py  tuple.py  union.py
