[tool.poetry]
name = "homework-07"
version = "0.1.0"
description = "homework-07"
authors = ["astashenkov <ya.astashenkov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.3.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
flake8-bugbear = "^24.8.19"
flake8-builtins = "^2.5.0"
pep8-naming = "^0.14.1"
flake8-commas = "^4.0.0"
flake8-variables-names = "^0.0.6"
flake8-import-order = "^0.18.2"
flake8-picky-parentheses = "^0.5.5"
flake8-strict = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"